--- a/css/historia.css
+++ b/css/historia.css
@@ -1,4 +1,5 @@
 html {
+    font-family: 'Roboto', sans-serif;
     height: 100%;
 }
 
@@ -7,4 +8,3 @@ body {
     font-size: 1.5em;
     background-color: #FFFAE8;
 }
-
