--- a/Carreras/css/carrera.css
+++ b/Carreras/css/carrera.css
@@ -8,9 +8,20 @@ body {
     background-color: #FFFAE8;
 }
 
+.contenedor {
+    display: flex;
+    overflow: hidden;
+}
+
+.contenedor img {
+    width: 60%;
+    border: 1px solid black;
+    
+}
+
 .listaCarreras {
-    width: 250px;
-    margin: 25px 25px;
+    margin-left: 5%;
+    flex: 0 0 20%;
 }
 
 .listaCarreras h1 {
@@ -21,4 +32,11 @@ body {
 .listaCarreras ul {
     list-style-type: none;
     padding: 0;
+    border-right: 1px solid black;
+}
+
+.carrera {
+    margin-left: 10%;
+    margin-top: auto;
+    flex: 1;
 }
