--- a/Carreras/css/carrera.css
+++ b/Carreras/css/carrera.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', 'Arial', 'Times New Roman', sans-serif;
     font-size: 1.5em;
     background-color: #FFFAE8;
 }
@@ -16,7 +16,6 @@ body {
 .contenedor img {
     width: 60%;
     border: 1px solid black;
-    
 }
 
 .listaCarreras {
