--- a/css/carreras.css
+++ b/css/carreras.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', 'Arial', 'Times New Roman', sans-serif;
     font-size: 1.5em;
     background-color: #FFFAE8;
 }
