--- a/css/reiniciarContraseña.css
+++ b/css/reiniciarContraseña.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', 'Arial', 'Times New Roman', sans-serif;
     font-size: 1.5em;
     background-color: #FFFAE8;
 }
