--- a/css/login.css
+++ b/css/login.css
@@ -4,7 +4,7 @@
     margin: 5px 5px 5px 5px;
 }
 body{
-    background-color: lightblue;
+    background-color: rgb(173, 216, 230);
     font-family: 'Roboto', 'Arial', 'Times New Roman', sans-serif;
 }
 
