--- a/css/historia.css
+++ b/css/historia.css
@@ -5,5 +5,5 @@ html {
 body {
     font-family: 'Roboto', 'Arial', 'Times New Roman', sans-serif;
     font-size: 1.5em;
-    background-color: #FFFAE8;
+    background-color: rgb(255, 250, 232);
 }
