--- a/css/home.css
+++ b/css/home.css
@@ -5,6 +5,6 @@ html {
 body {
     font-family: 'Roboto', 'Arial', 'Times New Roman', sans-serif;
     font-size: 1.5em;
-    background-color: #FFFAE8;
+    background-color: rgb(255, 250, 232);
 }
 
