--- a/css/reiniciarContraseña.css
+++ b/css/reiniciarContraseña.css
@@ -6,7 +6,7 @@ html {
 body {
     font-family: 'Roboto', 'Arial', 'Times New Roman', sans-serif;
     font-size: 1.5em;
-    background-color: #FFFAE8;
+    background-color: rgb(255, 250, 232);
 }
 
 h1, p{
