--- a/css/perfilAlumno.css
+++ b/css/perfilAlumno.css
@@ -15,18 +15,7 @@ body {
     float: left;
 }
 
-#fotoUsuario{
-    width: 150px;
-    height: 150px;
-    border-radius: 10px;
-}
-
-.contenedor {
-    display: flex;
-    overflow: hidden;
-}
-
-.perfilUsuario {
+.container {
     background-color: rgb(211, 211, 211);
     width: 80%;
     height: 500px;   
@@ -35,15 +24,38 @@ body {
     padding: 15px;
 }
 
-.menuPerfil {
-   height: 80%;
-   width: 20%;
-   float: right;
-   background-color: rgb(173, 216, 230);
-   border-left: 1px solid rgb(0, 0, 0);
+#fotoUsuario{
+    width: 150px;
+    height: 150px;
+    border-radius: 10px;
+    border: 1px solid rgb(0, 0, 0);
 }
 
-.contenedor img {
+
+.menuPerfil {
+    height: 80%;
+    width: 40%;
+    margin-top: 5%;
+    float: right;
+    background: -webkit-linear-gradient(top,rgba(255,0,0,0),rgba(90, 236, 255,1)); 
+    background: -o-linear-gradient(bottom,rgba(255,0,0,0),rgba(90, 236, 255,1)); 
+    background: -moz-linear-gradient(bottom,rgba(255,0,0,0),rgba(90, 236, 255,1)); 
+    background: linear-gradient(to bottom, rgba(255,0,0,0), rgba(90, 236, 255,1));
+
+    border-left: 1px solid rgb(0, 0, 0);
+}
+
+button {
+    margin-bottom: 5px;
+}
+
+
+/* .contenedor {
+    display: flex;
+    overflow: hidden;
+} */
+
+/* .contenedor img {
     width: 60%;
     border: 1px solid rgb(0, 0, 0); 
-}
+} */
