--- a/css/abmCatedras.css
+++ b/css/abmCatedras.css
@@ -1,18 +1,20 @@
 html {
     height: 100%;
 }
-
+/* Standard del website */
 body {
     font-family: 'Roboto', 'Arial', 'Times New Roman', sans-serif;
     font-size: 1.5em;
     background-color: rgb(255, 250, 232);
 }
 
+/* Estilo del titulo */
 h1 {
     text-align: center;
     font-weight: bold;
 }
 
+/* Estilo del boton para guardar datos */
 #submit {
     margin-right: 50%; 
     margin-top: 5%;
