--- a/css/carreras.css
+++ b/css/carreras.css
@@ -2,6 +2,7 @@ html {
     height: 100%;
 }
 
+/* Standard del website */
 body {
     font-family: 'Roboto', 'Arial', 'Times New Roman', sans-serif;
     font-size: 1.5em;
@@ -13,6 +14,7 @@ body {
     overflow: hidden;
 }
 
+/* Estilos para listado de carreras */
 .listaCarreras {
     margin-left: 5%;
     flex: 0 0 20%;
