--- a/css/historia.css
+++ b/css/historia.css
@@ -2,6 +2,7 @@ html {
     height: 100%;
 }
 
+/* Standard del website */
 body {
     font-family: 'Roboto', 'Arial', 'Times New Roman', sans-serif;
     font-size: 1.5em;
