--- a/css/login.css
+++ b/css/login.css
@@ -3,9 +3,10 @@
     float: left;
     margin: 5px 5px 5px 5px;
 }
-body{
-    background-color: rgb(173, 216, 230);
+/* Standard del website */
+body {
     font-family: 'Roboto', 'Arial', 'Times New Roman', sans-serif;
+    background-color: rgb(255, 250, 232);
 }
 
 #login_block{
