--- a/css/abms.css
+++ b/css/abms.css
@@ -20,3 +20,14 @@ h1 {
     margin-top: 5%;
     float: right;
 }
+
+/* Anchos de los label para que esten todos alineados */
+label {
+    float: left;
+    width: 250px;
+}
+
+/* Anchos de los input para que esten todos alineados */
+input {
+    width: 250px;
+}
