--- a/css/altaAdministrador.css
+++ b/css/altaAdministrador.css
@@ -15,6 +15,13 @@ label {
     width: 250px;
 }
 
+#imagenUsuario {
+    width: 20px;
+    height: 20px;
+    margin: 0 auto;
+    float: left;
+}
+
 /* Anchos de los input para que esten todos alineados */
 input {
     width: 250px;
