--- a/css/perfilAdministrador.css
+++ b/css/perfilAdministrador.css
@@ -34,7 +34,7 @@ body {
 
 .menuPerfil {
     height: 80%;
-    width: 40%;
+    width: 55%;
     margin-top: 5%;
     float: right;
     background: -webkit-linear-gradient(top,rgba(255,0,0,0),rgba(90, 236, 255,1)); 
@@ -49,6 +49,13 @@ button {
     margin-bottom: 5px;
 }
 
+a {
+    width: 200px;
+}
+
+li {
+    padding-bottom: 5px;
+}
 
 /* .contenedor {
     display: flex;
