--- a/css/perfilAdministrador.css
+++ b/css/perfilAdministrador.css
@@ -49,20 +49,10 @@ button {
     margin-bottom: 5px;
 }
 
-a {
-    width: 200px;
-}
-
 li {
     padding-bottom: 5px;
 }
 
-/* .contenedor {
-    display: flex;
-    overflow: hidden;
-} */
-
-/* .contenedor img {
-    width: 60%;
-    border: 1px solid rgb(0, 0, 0); 
-} */
+#btnCerrarSesion {
+    display: none;
+}
